fixed hamburger menu visibility for smaller screen

--- a/src/partials/_mediaQueries.scss
+++ b/src/partials/_mediaQueries.scss
@@ -59,7 +59,6 @@
     // Hide main Nav
     .globalNav {
         display: none;
-        // visibility: hidden;
     }
 
     // Show Hamburger menu
@@ -67,7 +66,7 @@
         position: absolute;
         top: 10px;
         left: 10px;
-        display: block;
+        display: block !important;
     }    
 
     //Create Your Guest
